--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,13 @@
     height: 342px;
     overflow: hidden;
 }
+.my-thumb {
+    width: 80px;
+}
+.my-old-img-container {
+    border: 1px dashed lightgray;
+    padding: 5px 0;
+}
+.my-thumb-show {
+    width: 280px;
+}
