complete email, fix graphic and initial responsive layout

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -15,3 +15,12 @@
 .my-thumb-show {
     width: 280px;
 }
+.my-logo-container {
+    width: 250px;
+}
+.my-logo-nav {
+    width: 70px;
+}
+.my-bg-home {
+    background-color: #F4F3EF;
+}
