--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,25 +5,33 @@
     height: 342px;
     overflow: hidden;
 }
+
 .my-thumb {
     width: 80px;
 }
+
 .my-old-img-container {
     border: 1px dashed lightgray;
     padding: 5px 0;
 }
-.my-thumb-show {
-    width: 280px;
-}
+
 .my-logo-container {
     width: 250px;
 }
+
 .my-logo-nav {
     width: 70px;
 }
+
 .my-bg-home {
     background-color: #F4F3EF;
 }
+
+.img-show-container {
+    overflow: hidden;
+    height: 400px;
+}
+
 @media screen and (max-width: 385px) {
     .my-position-btn-2-extra-small {
         position: absolute !important;
@@ -31,23 +39,28 @@
         top: -20px !important;
         margin-left: 3rem !important;
     }
+
+    .my-title-small {
+        width: 175px;
+        word-wrap: break-word;
+    }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 675px) {
     .my-position {
-      position: relative;
+        position: relative;
     }
-  
+
     .my-position-btn-1 {
-      position: absolute;
-      top: -70px;
-      left: 130px;
+        position: absolute;
+        top: -70px;
+        left: 130px;
     }
-  
+
     .my-position-btn-2 {
-      position: absolute;
-      top: -70px;
-      left: 260px;
+        position: absolute;
+        top: -70px;
+        left: 260px;
     }
 }
 
@@ -55,10 +68,36 @@
     .my-width {
         width: 50%;
     }
+
+    .img-show-container {
+        flex-basis: calc(100% / 2);
+        height: 320px;
+    }
+
+    .my-form-watch {
+        width: 85%;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .img-show-container {
+        flex-basis: calc(100% / 3);
+        height: 280px;
+    }
+
+    .my-form-watch {
+        width: 75%;
+    }
 }
 
 @media screen and (min-width: 900px) {
     .my-list-width {
         width: 234.883px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .my-form-watch {
+        width: 50%;
     }
 }
